--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 /out-tsc
 
 /node_modules
+/dist
+/.idea
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -9,3 +11,6 @@ yarn-error.log*
 .pnp.js
 
 .vscode/*
+
+/uploads/*
+!/uploads/.gitkeep
