--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,9 @@ services:
       - db
     environment:
       DATABASE_URL: postgres://user:password@db:5432/mydb
+    volumes:
+      - ./src:/usr/src/app/src
+    command: npm run dev
 
   db:
     image: postgres
