--- a/package.json
+++ b/package.json
@@ -5,18 +5,21 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/app.js",
-    "dev": "ts-node src/app.ts"
+    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/app.ts"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "pg": "^8.7.1",
-    "body-parser": "^1.19.0"
+    "multer": "^1.4.5-lts.1",
+    "pg": "^8.13.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "@types/pg": "^8.6.1",
+    "@types/multer": "^1.4.12",
     "@types/node": "^16.11.12",
-    "typescript": "^4.5.2",
-    "ts-node": "^10.4.0"
+    "@types/pg": "^8.11.10",
+    "nodemon": "^3",
+    "ts-node": "^10.9.2",
+    "typescript": "^4.5.2"
   }
 }
