fix: start simple front-end

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,6 @@ services:
       DATABASE_URL: postgres://user:password@db:5432/mydb
     volumes:
       - ./uploads:/usr/src/app/uploads
-    command: sh -c "npm run build && npm run start"
 
   db:
     image: postgres
@@ -21,6 +20,13 @@ services:
       - postgres_data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
+
+  frontend:
+    build: ./image-uploader-frontend
+    ports:
+      - "4200:80"
+    depends_on:
+      - app
 
 volumes:
   postgres_data:
