Revert "fix: start simple front-end"
This reverts commit 0e9a9ac2b8b3c0d6055fb9d66efed41ad102bd3c.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       DATABASE_URL: postgres://user:password@db:5432/mydb
     volumes:
       - ./uploads:/usr/src/app/uploads
+    command: sh -c "npm run build && npm run start"
 
   db:
     image: postgres
@@ -20,13 +21,6 @@ services:
       - postgres_data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
-
-  frontend:
-    build: ./image-uploader-frontend
-    ports:
-      - "4200:80"
-    depends_on:
-      - app
 
 volumes:
   postgres_data:
